# spcount

./: Dockerfile  LICENSE  MANIFEST.in  README.md  Taxonomy.py  __main__.py  bowtie_util.py  database_util.py  setup.cfg  setup.py
scripts/: T01_taxonomy.py  T02_assembly_summary.py  T02_dl_database.py  T02_dl_database_fungi.py  T03_bowtie_count.py  T04_count_table.ipynb  T04_count_table.py  T05_count_table_tree.ipynb  T06_krona.ipynb  T07_shannon.ipynb  T08_krona_estimated_count.ipynb  context.py  genbank.sh  genbank_archaea.sh  genbank_bacteria.sh  genbank_viruses.sh  query.ipynb  refseq.ipynb  refseq_virus.py  slurm.sh  uninstall.sh
spcount/: BowtieCountItem.py  BowtieIndex.py  Category.py  CategoryEntry.py  __init__.py  __main__.py  bowtie_util.py  count_util.py  database_util.py  sequential_count_util.py  slurm.sh  slurm.template  taxonomy_util.py  test.sh
src/: debug.py
src/spcount/: BowtieIndex.py  GenomeItem.py  Query.py  Sequence.py  Species.py  Taxonomy.py  __init__.py  __main__.py  category_utils.py  common_util.py  count_util.py  database_util.py  fastq_util.py  refseq_bowtie_count.ipynb  refseq_bowtie_count.py  sequential_count_util.py  slurm.template  statistic_util.py  taxonomy_util.py  visualization_util.py
tests/: context.py  test_Taxonomy.py  test_TaxonomyTree.py  test_count_util.py
