[metadata]
name = spcount
version = 0.0.10
author = Quanhu Sheng
author_email = quanhu.sheng.1@vumc.org
description = A package for taxonomy based genome quantification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shengqh/spcount
project_urls =
    Bug Tracker = https://github.com/shengqh/spcount/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src